crates/fortitude_linter/src/snapshots/fortitude_linter__format__test__derived-type-private-type-bound-procedures.f90.snap
---
source: fortitude/src/format.rs
expression: string
---
program test
  type foo
  contains
    private
    procedure :: bar
    procedure, public :: quux
  end type foo
end program test
