crates/fortitude_linter/src/snapshots/fortitude_linter__format__test__derived-type-procedure-pointer-components.f90.snap
---
source: fortitude/src/format.rs
expression: string
---
program test
  type foo
    procedure(some_interface), pointer :: bar => null()
    procedure(some_interface), pointer, nopass :: quux
  end type foo
end program test
