crates/fortitude_linter/src/snapshots/fortitude_linter__format__test__enumeration-type.f90.snap
---
source: fortitude/src/format.rs
expression: string
---
module enumeration_mod
  enumeration type, public :: v_value
    enumerator :: v_one, v_two, v_three
    enumerator v_four
  end enumeration type v_value
end module enumeration_mod
