crates/fortitude_linter/src/snapshots/fortitude_linter__format__test__interface-abstract.f90.snap
---
source: fortitude/src/format.rs
expression: string
---
abstract interface
  subroutine ex(a, b, c)
    implicit none
    real :: a, b(10, 2)
    integer :: c
  end subroutine ex
  function why(t, f)
    implicit none
    logical, intent(in) :: t, f
    logical :: why
  end function why
end interface
