crates/fortitude_linter/src/snapshots/fortitude_linter__format__test__program.f90.snap
---
source: fortitude/src/format.rs
expression: string
---
PROGRAM TEST
END PROGRAM
PROGRAM TEST
END PROGRAM TEST
