crates/fortitude_linter/src/snapshots/fortitude_linter__format__test__semicolon-in-interface.f90.snap
---
source: crates/fortitude_linter/src/format.rs
expression: string
snapshot_kind: text
---
interface operator(+);
  module procedure test_plus
  ;
end interface
