crates/fortitude_linter/src/snapshots/fortitude_linter__format__test__use-operator-and-assignment.f90.snap
---
source: fortitude/src/format.rs
expression: string
---
module test
  use other, only : operator(==), assignment (=)
  public :: assignment (=)
  private operator(==)
end module
